--- a/lw9/public/index.html
+++ b/lw9/public/index.html
@@ -12,7 +12,6 @@
       <label for="jsSelectHarmonicFunction">Harmonic Function</label>
       <select multiple class="form-control" id="jsSelectHarmonicFunction"></select>
       <input type="button" id="addItemButton" value="Add Item" style="margin-top: 10px">
-      <input type="button" id="editItemButton" value="Edit Item" style="margin-top: 10px; margin-left: 10px;">
     </div>
     <div style="clear: both;"></div>
 
@@ -27,24 +26,19 @@
           </div>
           <div class="modal-body">
             <form id="jsHarmonicFunctionForm">
+              <input type="hidden" class="form-control" id="jsFunctionId">
               <div class="form-group">
                 <label for="jsAmplitude">Amplitude</label>
-                <input type="text" class="form-control" id="jsAmplitude" placeholder="Amplitude">
-                <div style="margin-top: 10px;">
-                  <div class="form-check form-check-inline"  style="float: left;">
-                    <label class="form-check-label" for="inlineRadio1">sin</label>
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                  </div>
-                  <div class="form-check form-check-inline" style="float:left; margin-left: 10px;">
-                    <label class="form-check-label" for="inlineRadio2">cos</label>
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                  </div>
-                  <div style="clear: both;"></div>
-                </div>
+                <input name="amplitide" type="text" class="form-control" id="jsAmplitude" placeholder="Amplitude">
+                <label for="jsTypeSelect">Type</label>
+                <select class="form-control"name="type" id="jsTypeSelect">
+                  <option value="sin" selected>sin</option>
+                  <option value="cos">cos</option>
+                </select>
                 <label for="jsFrequency" style="margin-top: 5px">Frequency</label>
-                <input type="text" class="form-control" id="jsFrequency" placeholder="Frequency">
+                <input name="frequency" type="text" class="form-control" id="jsFrequency" placeholder="Frequency">
                 <label for="jsPhase" style="margin-top: 5px">Phase</label>
-                <input type="text" class="form-control" id="jsPhase" placeholder="Phase">
+                <input name="phase" type="text" class="form-control" id="jsPhase" placeholder="Phase">
               </div>
             </form>
           </div>
