--- a/lw9/public/index.html
+++ b/lw9/public/index.html
@@ -44,6 +44,7 @@
           </div>
           <div class="modal-footer">
             <input type="button" id="saveItemButton" value="Save" style="margin-top: 10px; float: right;">
+            <input type="button" id="deleteItemButton" value="Delete" style="margin-top: 10px; margin-right: 10px; float: right;">
           </div>
         </div>
       </div>
